--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "^2.6.8",
     "ejs": "^2.5.6",
     "express": "^4.15.3",
+    "gulp-watch": "^4.3.11",
     "jshint": "^2.9.4",
     "mongojs": "^2.4.0",
     "morgan": "^1.8.1"
